--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "express-session": "^1.17.3",
     "openid": "^2.0.12",
     "openid-client": "^6.1.7"
   }
