--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "express-session": "^1.17.3",
     "openid": "^2.0.12",
+    "redis": "^4.6.3",
     "openid-client": "^6.1.7",
     "steamcommunity": "^3.44.6"
   }
